Close #17 Fix localization

--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -24,36 +24,51 @@
   -->
 
 <resources>
+    <string name="activity_edit_template">定型文設定</string>
+    <string name="activity_setting">アプリ設定</string>
+    <string name="activity_edit_extraction">抽出設定</string>
+    <string name="activity_edit_command">コマンド設定</string>
+    <string name="activity_authenticate">認証</string>
+    <string name="activity_licenses">ライセンス</string>
+    <string name="activity_edit_tab">タブ表示設定</string>
+    <string name="intent_post">つぶやく</string>
     <string name="namestyle_s_n">ScreenName / Name</string>
     <string name="namestyle_n_s">Name / ScreenName</string>
     <string name="namestyle_s">ScreenName</string>
     <string name="namestyle_n">Name</string>
     <string name="theme_dark">Dark</string>
     <string name="theme_light">Light</string>
-    <string name="page_name_post">つぶやく</string>
+    <string name="page_name_post">投稿</string>
     <string name="page_name_home">ホーム</string>
-    <string name="page_name_mentions">メンション</string>
-    <string name="page_name_messages">メッセージ</string>
-    <string name="page_name_history">通知</string>
-    <string name="actionbar_search">ページを追加</string>
+    <string name="page_name_mentions">リプライ</string>
+    <string name="page_name_messages">DM</string>
+    <string name="page_name_history">通知履歴</string>
+    <string name="page_name_search">検索</string>
+    <string name="page_name_list">リスト</string>
+    <string name="actionbar_post">投稿</string>
     <string name="actionbar_settings">設定</string>
     <string name="actionbar_setting">アプリ設定</string>
     <string name="actionbar_edit_templates">定型文設定</string>
     <string name="actionbar_edit_extraction">抽出設定</string>
     <string name="actionbar_edit_commands">コマンド設定</string>
+    <string name="actionbar_edit_tabs">タブ設定</string>
     <string name="actionbar_services">外部サイト</string>
     <string name="actionbar_report">作者に連絡</string>
     <string name="actionbar_favstar">Favstar</string>
     <string name="actionbar_aclog">Aclog</string>
     <string name="actionbar_twilog">Twilog</string>
+    <string name="actionbar_edit_command_all_on">すべて有効にする</string>
+    <string name="text_message_to_author">" #SmileEssence @laco0416 [ver.%s]"</string>
     <string name="format_event_favorited">%sからふぁぼられた</string>
     <string name="format_event_unfavorited">%sからあんふぁぼされた</string>
     <string name="format_event_retweeted">%sからリツイートされた</string>
-    <string name="format_event_mentioned">%sからの返信</string>
+    <string name="format_event_mentioned">%sからのリプライ</string>
     <string name="format_event_followed">%sからフォローされた</string>
     <string name="format_event_blocked">%sからブロックされた</string>
     <string name="format_event_unblocked">%sからブロック解除された</string>
     <string name="format_event_message">%sからのDMを受信</string>
+    <string name="format_status_command_nanigaja">な～にが%sじゃ</string>
+    <string name="format_status_command_make_anonymous">？？？「%s」</string>
     <string name="setting_category_display_title">表示設定</string>
     <string name="setting_category_display_summary">再起動後に有効になります</string>
     <string name="setting_text_size_title">文字サイズ</string>
@@ -85,87 +100,11 @@
     <string name="error_setting_text_size_not_number">数を入力してください</string>
     <string name="error_setting_timelines_range">1から200の間で設定してください</string>
     <string name="error_setting_timelines_not_number">数を入力してください</string>
+    <string name="error_intent_status_cannot_load">ツイートを取得できませんでした</string>
     <string name="alert_dialog_ok">OK</string>
-    <string name="dialog_title_about">アプリ情報</string>
-    <string name="dialog_licenses_notices_of_files">Notices of files:</string>
-    <string name="dialog_title_licenses">オープンソースライセンス</string>
-    <string name="command_status_reply">返信</string>
-    <string name="command_user_reply">返信</string>
-    <string name="command_message_reply">返信</string>
-    <string name="command_event_reply">返信</string>
-    <string name="post_button_tweet">つぶやく</string>
-    <string name="notice_tweet_succeeded">投稿しました</string>
-    <string name="notice_tweet_failed">投稿失敗しました</string>
-    <string name="command_status_reply_to_all">全員に返信</string>
-    <string name="command_status_favorite">お気に入りに追加</string>
-    <string name="notice_favorite_succeeded">お気に入りに追加しました</string>
-    <string name="notice_favorite_failed">お気に入りの追加に失敗しました</string>
-    <string name="command_status_retweet">リツイート</string>
-    <string name="notice_retweet_succeeded">リツイートしました</string>
-    <string name="notice_retweet_failed">リツイートに失敗しました</string>
-    <string name="command_status_fav_and_rt">ふぁぼ＆リツイート</string>
-    <string name="command_status_quote">引用</string>
-    <string name="command_status_clipboard">クリップボードにコピー</string>
-    <string name="command_status_share">共有</string>
-    <string name="command_status_open_in_browser">ブラウザで開く</string>
-    <string name="command_status_nanigaja">な～にが◯◯じゃ</string>
-    <string name="format_status_command_nanigaja">な～にが%sじゃ</string>
-    <string name="command_status_make_anonymous">匿名にする</string>
-    <string name="format_status_command_make_anonymous">？？？「%s」</string>
-    <string name="command_status_tofubuster">TofuBuster</string>
-    <string name="notice_tofubuster_not_found">TofuBusterがインストールされていません</string>
-    <string name="command_status_delete">削除</string>
-    <string name="notice_status_delete_succeeded">削除しました</string>
-    <string name="notice_status_delete_failed">削除に失敗しました</string>
-    <string name="command_user_add_to_reply">返信に追加</string>
-    <string name="command_user_open_favstar">Favstarを開く</string>
-    <string name="command_user_open_aclog">Aclogを開く</string>
-    <string name="command_user_open_twilog">Twilogを開く</string>
-    <string name="command_user_follow">フォロー</string>
-    <string name="notice_follow_succeeded">フォローしました</string>
-    <string name="notice_follow_failed">フォローに失敗しました</string>
-    <string name="command_user_unfollow">リムーブ</string>
-    <string name="notice_unfollow_succeeded">リムーブしました</string>
-    <string name="notice_unfollow_failed">リムーブに失敗しました</string>
-    <string name="command_user_block">ブロック</string>
-    <string name="notice_block_succeeded">ブロックしました</string>
-    <string name="notice_block_failed">ブロックに失敗しました</string>
-    <string name="command_user_unblock">ブロック解除</string>
-    <string name="notice_unblock_succeeded">ブロック解除しました</string>
-    <string name="notice_unblock_failed">ブロック解除に失敗しました</string>
-    <string name="command_user_r4s">スパム報告</string>
-    <string name="notice_r4s_succeeded">スパム報告しました</string>
-    <string name="notice_r4s_failed">スパム報告に失敗しました</string>
-    <string name="command_user_introduce">みんなに紹介する</string>
-    <string name="command_message_delete">削除</string>
-    <string name="notice_message_delete_succeeded">削除しました</string>
-    <string name="notice_message_delete_failed">削除に失敗しました</string>
-    <string name="command_user_send_message">ダイレクトメッセージを送る</string>
-    <string name="notice_message_send_succeeded">DMを送信しました</string>
-    <string name="notice_message_send_failed">DMの送信に失敗しました</string>
-    <string name="dialog_message_now_loading">読み込み中…</string>
-    <string name="notice_error_show_user">ユーザーを表示できませんでした</string>
-    <string name="command_open_status_chain">会話を見る</string>
-    <string name="notice_error_show_status">ツイートを表示できませんでした</string>
-    <string name="text_message_to_author">" #SmileEssence @laco0416 [ver.%s]"</string>
-    <string name="activity_edit_template">定型文設定</string>
-    <string name="dialog_title_edit">編集</string>
-    <string name="dialog_title_add">新規作成</string>
     <string name="alert_dialog_cancel">キャンセル</string>
-    <string name="activity_setting">アプリ設定</string>
-    <string name="activity_edit_extraction">抽出設定</string>
-    <string name="actionbar_edit_command_all_on">すべて有効にする</string>
-    <string name="activity_edit_command">コマンド設定</string>
-    <string name="notice_error_get_home">ホームの取得に失敗しました</string>
-    <string name="notice_error_get_mentions">メンションの取得に失敗しました</string>
-    <string name="notice_error_get_messages">メッセージの取得に失敗しました</string>
-    <string name="notice_error_authenticate">認証に失敗しました。後でもう一度お試しください</string>
-    <string name="activity_authenticate">認証</string>
-    <string name="notice_stream_connect">接続しました</string>
-    <string name="notice_stream_disconnect">切断しました</string>
-    <string name="notice_error_authenticate_request">認証の準備に失敗しました。インターネット接続を確認して下さい</string>
-    <string name="notice_timeline_new">%s件の新着があります</string>
-    <string name="command_status_add_to_reply">返信に追加</string>
+    <string name="post_button_tweet">ツイート</string>
+    <string name="post_button_send_message">メッセージを送信</string>
     <string name="user_detail_tweets">Tweets</string>
     <string name="user_detail_following">Following</string>
     <string name="user_detail_followers">Followers</string>
@@ -179,52 +118,109 @@
     <string name="user_detail_loading">読み込み中</string>
     <string name="user_detail_tab_info">Info</string>
     <string name="user_detail_tab_timeline">Timeline</string>
-    <string name="notice_unfavorite_succeeded">お気に入りを削除しました</string>
-    <string name="notice_unfavorite_failed">お気に入りの削除に失敗しました</string>
-    <string name="command_post_morse">モールスに変換</string>
-    <string name="command_open_template_list">定型文を挿入</string>
-    <string name="dialog_confirm_finish_app">終了しますか？</string>
-    <string name="command_select_image_from_gallery">ギャラリーから選択する</string>
-    <string name="command_select_image_from_camera">カメラを起動する</string>
+    <string name="dialog_title_about">アプリ情報</string>
+    <string name="dialog_title_licenses">オープンソースライセンス</string>
+    <string name="dialog_title_edit">編集</string>
+    <string name="dialog_title_add">新規作成</string>
     <string name="dialog_title_select_image">画像を選択</string>
+    <string name="dialog_title_select_search_query">検索クエリを選択</string>
+    <string name="dialog_title_talk_chain">会話ビュー</string>
+    <string name="dialog_title_select_userlist">リストを選択</string>
+    <string name="dialog_licenses_notices_of_files">Notices of files:</string>
+    <string name="dialog_message_now_loading">読み込み中…</string>
+    <string name="dialog_confirm_finish_app">終了しますか？</string>
+    <string name="dialog_confirm_commands">実行しますか？</string>
+    <string name="dialog_confirm_clear_account">本当に認証を削除しますか？</string>
+    <string name="dialog_confirm_delete_query">クエリを削除しますか？</string>
+    <string name="notice_tweet_succeeded">投稿しました</string>
+    <string name="notice_tweet_failed">投稿失敗しました</string>
+    <string name="notice_favorite_succeeded">ふぁぼりました</string>
+    <string name="notice_favorite_failed">ふぁぼれませんでした</string>
+    <string name="notice_retweet_succeeded">リツイートしました</string>
+    <string name="notice_retweet_failed">リツイートに失敗しました</string>
+    <string name="notice_tofubuster_not_found">TofuBusterがインストールされていません</string>
+    <string name="notice_status_delete_succeeded">ツイートを削除しました</string>
+    <string name="notice_status_delete_failed">ツイートの削除に失敗しました</string>
+    <string name="notice_follow_succeeded">フォローしました</string>
+    <string name="notice_follow_failed">フォローに失敗しました</string>
+    <string name="notice_unfollow_succeeded">フォロー解除しました</string>
+    <string name="notice_unfollow_failed">フォロー解除に失敗しました</string>
+    <string name="notice_block_succeeded">ブロックしました</string>
+    <string name="notice_block_failed">ブロックに失敗しました</string>
+    <string name="notice_unblock_succeeded">ブロック解除しました</string>
+    <string name="notice_unblock_failed">ブロック解除に失敗しました</string>
+    <string name="notice_r4s_succeeded">スパム報告しました</string>
+    <string name="notice_r4s_failed">スパム報告に失敗しました</string>
+    <string name="notice_message_delete_succeeded">DMを削除しました</string>
+    <string name="notice_message_delete_failed">DMの削除に失敗しました</string>
+    <string name="notice_message_send_succeeded">DMを送信しました</string>
+    <string name="notice_message_send_failed">DMの送信に失敗しました</string>
+    <string name="notice_stream_connect">接続しました</string>
+    <string name="notice_stream_disconnect">切断しました</string>
+    <string name="notice_timeline_new">%s件の新着があります</string>
+    <string name="notice_unfavorite_succeeded">あんふぁぼしました</string>
+    <string name="notice_unfavorite_failed">あんふぁぼに失敗しました</string>
     <string name="notice_select_image_succeeded">画像を選択しました</string>
     <string name="notice_select_image_failed">画像の選択に失敗しました</string>
-    <string name="notice_error_start_activity">アクティビティを起動できませんでした</string>
     <string name="notice_not_implemented_yet">まだ実装されてないです。ごめんね</string>
-    <string name="command_save_as_template">定型文として保存</string>
     <string name="notice_save_as_template">定型文を保存しました</string>
-    <string name="notice_error_rate_limit">レートリミットを超えています</string>
-    <string name="dialog_title_add_new_page">新しいタブを追加</string>
-    <string name="command_create_search_page_dialog">検索タブ</string>
-    <string name="dialog_create_search_page">検索クエリを入力</string>
-    <string name="notice_error_search">検索に失敗しました</string>
-    <string name="command_paste_to_post">投稿欄に貼り付け</string>
-    <string name="command_search_on_twitter">Twitterで検索</string>
-    <string name="page_name_search">検索</string>
     <string name="notice_search_text_empty">クエリが空です</string>
-    <string name="dialog_title_select_search_query">検索クエリを選択</string>
-    <string name="actionbar_post">投稿</string>
-    <string name="dialog_confirm_commands">実行しますか？</string>
-    <string name="notice_add_to_reply">返信に追加しました</string>
+    <string name="notice_add_to_reply">リプライ先に追加しました</string>
     <string name="notice_theme_changed">テーマは再起動後に有効になります</string>
-    <string name="dialog_confirm_clear_account">本当に認証を削除しますか？</string>
     <string name="notice_cleared_account">認証情報が削除されました。 再起動後に認証してください</string>
-    <string name="activity_licenses">ライセンス</string>
     <string name="notice_copy_clipboard">クリップボードにコピーしました</string>
-    <string name="dialog_title_talk_chain">会話ビュー</string>
-    <string name="page_name_list">リスト</string>
     <string name="notice_userlist_not_selected">リストが選択されていません</string>
-    <string name="dialog_title_select_userlist">リストを選択</string>
-    <string name="command_status_add_to_ignore">以後このツイートを無視する</string>
-    <string name="notice_add_to_ignore">無視リストに追加しました</string>
-    <string name="error_intent_status_cannot_load">ツイートを取得できませんでした</string>
-    <string name="intent_post">つぶやく</string>
-    <string name="post_button_send_message">メッセージを送信</string>
-    <string name="dialog_confirm_delete_query">クエリを削除しますか？</string>
+    <string name="notice_add_to_ignore">無視を決め込みました</string>
     <string name="notice_search_query_deleted">クエリを削除しました</string>
     <string name="notice_no_template_exists">定型文が存在しません</string>
     <string name="notice_no_query_exists">クエリが存在しません</string>
     <string name="notice_tab_editted">タブ設定は次回起動時から有効になります</string>
-    <string name="activity_edit_tab">タブ表示設定</string>
-    <string name="actionbar_edit_tabs">タブ設定</string>
+    <string name="notice_error_show_status">ツイートを表示できませんでした</string>
+    <string name="notice_error_show_user">ユーザーを表示できませんでした</string>
+    <string name="notice_error_get_home">ホームの取得に失敗しました</string>
+    <string name="notice_error_get_mentions">メンションの取得に失敗しました</string>
+    <string name="notice_error_get_messages">DMの取得に失敗しました</string>
+    <string name="notice_error_authenticate">認証に失敗しました。後でもう一度お試しください</string>
+    <string name="notice_error_authenticate_request">認証の準備に失敗しました。インターネット接続を確認して下さい</string>
+    <string name="notice_error_start_activity">アクティビティを起動できませんでした</string>
+    <string name="notice_error_rate_limit">レートリミットを超えています</string>
+    <string name="notice_error_search">検索に失敗しました</string>
+    <string name="command_user_reply">リプライを送る</string>
+    <string name="command_user_add_to_reply">リプライ先に追加する</string>
+    <string name="command_user_open_favstar">Favstarを開く</string>
+    <string name="command_user_open_aclog">Aclogを開く</string>
+    <string name="command_user_open_twilog">Twilogを開く</string>
+    <string name="command_user_follow">フォローする</string>
+    <string name="command_user_unfollow">フォロー解除する</string>
+    <string name="command_user_block">ブロックする</string>
+    <string name="command_user_unblock">ブロック解除</string>
+    <string name="command_user_r4s">スパム報告する</string>
+    <string name="command_user_introduce">このユーザーを紹介する</string>
+    <string name="command_user_send_message">DMを送る</string>
+    <string name="command_event_reply">リプライを送る</string>
+    <string name="command_message_reply">DMを送る</string>
+    <string name="command_message_delete">DMを削除する</string>
+    <string name="command_status_reply">リプライを送る</string>
+    <string name="command_status_reply_to_all">全員にリプライを送る</string>
+    <string name="command_status_favorite">ふぁぼる</string>
+    <string name="command_status_retweet">リツイートする</string>
+    <string name="command_status_fav_and_rt">ふぁぼ＆リツイートする</string>
+    <string name="command_status_quote">ツイートを引用する</string>
+    <string name="command_status_clipboard">クリップボードにコピーする</string>
+    <string name="command_status_share">共有する</string>
+    <string name="command_status_open_in_browser">ブラウザで開く</string>
+    <string name="command_status_nanigaja">な～にが◯◯じゃ</string>
+    <string name="command_status_make_anonymous">匿名にしてつぶやく</string>
+    <string name="command_status_tofubuster">TofuBusterで読む</string>
+    <string name="command_status_delete">ツイートを削除する</string>
+    <string name="command_status_add_to_reply">リプライ先に追加する</string>
+    <string name="command_status_open_talk_view">会話ビューを開く</string>
+    <string name="command_post_morse">モールスに変換する</string>
+    <string name="command_open_template_list">定型文を挿入する</string>
+    <string name="command_select_image_from_gallery">ギャラリーから選択する</string>
+    <string name="command_select_image_from_camera">カメラを起動する</string>
+    <string name="command_save_as_template">定型文として保存する</string>
+    <string name="command_paste_to_post">投稿欄に貼り付ける</string>
+    <string name="command_search_on_twitter">Twitterで検索する</string>
+    <string name="command_status_add_to_ignore">以後このツイートを無視する</string>
 </resources>
