--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -199,8 +199,8 @@
     <string name="command_message_reply">DMを送る</string>
     <string name="command_message_delete">DMを削除する</string>
     <string name="command_status_reply_to_all">全員にリプライを送る</string>
-    <string name="command_status_fav_and_rt">ふぁぼ＆リツイートする</string>
-    <string name="command_status_quote">ツイートを引用する</string>
+    <string name="command_status_fav_and_rt">ふぁぼ＆RTする</string>
+    <string name="command_status_quote">引用する</string>
     <string name="command_status_clipboard">クリップボードにコピーする</string>
     <string name="command_status_share">共有する</string>
     <string name="command_status_open_in_browser">ブラウザで開く</string>
@@ -209,6 +209,7 @@
     <string name="command_status_tofubuster">TofuBusterで読む</string>
     <string name="command_status_add_to_reply">リプライ先に追加する</string>
     <string name="command_status_open_talk_view">会話ビューを開く</string>
+    <string name="command_status_add_to_ignore">以後このツイートを無視する</string>
     <string name="command_post_morse">モールスに変換する</string>
     <string name="command_open_template_list">定型文を挿入する</string>
     <string name="command_select_image_from_gallery">ギャラリーから選択する</string>
@@ -216,5 +217,4 @@
     <string name="command_save_as_template">定型文として保存する</string>
     <string name="command_paste_to_post">投稿欄に貼り付ける</string>
     <string name="command_search_on_twitter">Twitterで検索する</string>
-    <string name="command_status_add_to_ignore">以後このツイートを無視する</string>
 </resources>
