--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -83,6 +83,7 @@
     <string name="setting_namestyle_dialog_title">Choose name style</string>
     <string name="setting_read_morse">Enable morse</string>
     <string name="setting_extend_status_url">Extend status url</string>
+    <string name="setting_extend_status_url_summary">Unstable</string>
     <string name="setting_category_system_title">System Setting</string>
     <string name="setting_safe_mode_title">Safe mode</string>
     <string name="setting_safe_mode_summary_on">Show confirm dialog</string>
