--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -214,6 +214,7 @@
     <string name="command_status_quote_url">URLを引用する</string>
     <string name="command_status_quote_text">本文を引用する</string>
     <string name="command_status_clipboard">クリップボードにコピーする</string>
+    <string name="command_status_copy_url_to_clipboard">URLをクリップボードにコピーする</string>
     <string name="command_status_share">共有する</string>
     <string name="command_status_open_in_browser">ブラウザで開く</string>
     <string name="command_status_nanigaja">な～にが◯◯じゃ</string>
